accessibility contrast fix for header text color

--- a/cas-server-webapp/src/main/resources/static/sass/cas.scss
+++ b/cas-server-webapp/src/main/resources/static/sass/cas.scss
@@ -92,6 +92,7 @@ header {
   width: 80%;
   margin-right: 40px;
   border: 0px;
+  color: white;
 }
 
 header h1 {
@@ -100,6 +101,7 @@ header h1 {
   height: 60px;
   background: url(../images/cas-logo.png) no-repeat;
   text-indent: -999em;
+  color: white;
 }
 
 #content {
